_archive/deploy-debug-shell.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-shell
spec:
  volumes:
  - name: shared-data
    emptyDir: {}
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: shared-data
      mountPath: /usr/share/nginx/html
  hostNetwork: true
  dnsPolicy: Default
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debug-shell
spec:
  selector:
    matchLabels:
      app: debug-shell
  replicas: 1
  template:
    metadata:
      labels:
        app: debug-shell
    spec:
      volumes:
        - name: shared-data
          emptyDir: {}
      containers:
        - name: nginx
          image: nginx
          volumeMounts:
            - name: shared-data
              mountPath: /usr/share/nginx/html
      # hostNetwork: true
      dnsPolicy: Default
