_archive/ingress-noauth.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    # nginx.ingress.kubernetes.io/auth-realm: Authentication Required - Nginx
    # nginx.ingress.kubernetes.io/auth-secret: prometheus/nginx-auth
    # nginx.ingress.kubernetes.io/auth-type: basic
  name: debug-shell
spec:
  rules:
    - host: debug-shell.mon.dimension.ws
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: debug-shell
                port:
                  number: 80
  tls:
    - hosts:
        - debug-shell.mon.dimension.ws
      secretName: debug-shell-general-tls
